# miniml

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  test_optim.py
.dvc/: config
.github/workflows/: publish-docs.yml  python-publish.yml  test.yml
docs/: composite_models.md  containers.md  fit.md  index.md  loss.md  nn.md  save_load.md  setup.md  start.md
examples/: example_1_lin.py  example_2_binclass.py  example_3_nn.py  example_4_rbf.py  example_5_digits.py  example_6_grokking.py
scripts/: import_dvc.py
src/miniml/: __init__.py  loss.py  model.py  param.py  random.py  utils.py
src/miniml/nn/: __init__.py  activations.py  compose.py  dropout.py  embedding.py  identity.py  layer_norm.py  linear.py  mha.py  mlp.py  ortho.py  parallel.py  positional.py  rbf.py  rbfnet.py  stack.py
src/miniml/optim/: __init__.py  adam.py  base.py  scipy.py
tests/: test_activity_regularization.py  test_loss.py  test_model.py  test_param.py  test_random.py  test_utils.py
tests/test_nn/: conftest.py  test_activations.py  test_compose.py  test_dropout.py  test_embeddings.py  test_identity.py  test_layer_norm.py  test_linear.py  test_mha.py  test_mlp.py  test_ortho.py  test_parallel.py  test_positional.py  test_rbf.py  test_rbfnet.py  test_stack.py
tests/test_nn/data/: linear.npz.dvc  mha_1.npz.dvc  mha_2.npz.dvc  mha_3.npz.dvc  mha_4.npz.dvc  mha_5.npz.dvc
tests/test_optim/: test_adam.py  test_base.py  test_scipy.py
