[project]
name = "miniml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.1",
    "scipy>=1.16.1",
]

[project.scripts]
miniml = "miniml:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
examples = [
    "marimo>=0.15.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]
