[project]
name = "miniml-jax"
version = "0.6.0"
description = "MiniML - a minimalistic ML framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.1",
    "numpy>=2.3.4",
    "scipy>=1.16.1",
    "typing-extensions>=4.15.0 ; python_full_version < '3.11'",
]

[project.urls]
Documentation = "https://stur86.github.io/miniml/"
Repository = "https://github.com/stur86/miniml"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "miniml"
module-root = "src/"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "dvc[s3]>=3.63.0",
    "mkdocs-api-autonav>=0.3.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings-python>=1.18.2",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "taskipy>=1.14.1",
]
examples = [
    "marimo>=0.16.0",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
]

[tool.ruff]
exclude = ["docs/**", "examples/**", "src/miniml/__init__.py"]

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff check . --fix"
black = "black src tests"
test = "pytest -v"
build-docs = "mkdocs build"
pull-data = "dvc pull"
import-dvc-files = "python scripts/import_dvc.py"
